--- a/style.css
+++ b/style.css
@@ -11,39 +11,32 @@ a{
 header{
     color: #4169E1;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+}
+
+header h1{
+    margin-left: 10px;
+    margin-top: 25px;
 }
 
 header img{
     padding-left: 15px;
     width: 75px;
-    height: 50px;
+    height: 130px;
     object-fit: cover;
     margin-left: 10px;
-    margin: 10px;
+  
 }
-header menu{
-    margin-right: 20px;
-}
-header nav{
+
+#NavMenu{
+    font-size: 1.6rem;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-right: 20px;
-}
-header nav ul{
+    gap: 20px;
+    margin-top: 25px;
+    margin-right: 25px;
     list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
 }
-header nav ul li{
-    padding: 10px;
-    border: #4169E1 1px solid;
-    border-radius: 5px;
-    text-align: center;
-}
-.ItensMenu:hover, a:hover{
-    background-color: white;
-    color: black;
+#NavMenu a{
+    color: inherit;
+    text-decoration: none;
 }
