--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: Arial, sans-serif;
     margin: 0;
@@ -11,17 +15,25 @@ a{
 header{
     color: #4169E1;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 100px;
 }
 
-header h1{
+#Logo{
+    display: flex;
+}
+#Logo h1{
+    display: flex;
+    align-items: center;
     margin-left: 10px;
-    margin-top: 25px;
+    font-size: 2.5rem;
+    color: #4169E1;
 }
 
 header img{
     padding-left: 15px;
-    width: 75px;
+    width: 150px;
     height: 130px;
     object-fit: cover;
     margin-left: 10px;
@@ -31,12 +43,17 @@ header img{
 #NavMenu{
     font-size: 1.6rem;
     display: flex;
-    gap: 20px;
-    margin-top: 25px;
-    margin-right: 25px;
+    gap: 25px;
+    margin-right: 55px;
     list-style-type: none;
+    white-space: nowrap;
 }
 #NavMenu a{
     color: inherit;
     text-decoration: none;
+}
+#NavMenu :hover{
+    color: white;
+    transform: scale(1.2);
+    transition: all 0.6s ease;
 }
