--- a/style.css
+++ b/style.css
@@ -57,3 +57,17 @@ header img{
     transform: scale(1.2);
     transition: all 0.6s ease;
 }
+#eventos{
+    display: flex;
+    flex-direction: column;
+    color: #4169E1;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: 50px;
+}
+#eventos img{
+    width: 200px;
+    height: auto;
+    object-fit: cover;
+    margin-top: 20px;
+}
