--- a/style.css
+++ b/style.css
@@ -57,17 +57,88 @@ header img{
     transform: scale(1.2);
     transition: all 0.6s ease;
 }
+
+/* Seção de eventos */
 #eventos{
     display: flex;
     flex-direction: column;
-    color: #4169E1;
+    color: #FFD700;
     font-size: 1.5rem;
     text-align: center;
-    margin-top: 50px;
 }
 #eventos img{
     width: 200px;
     height: auto;
     object-fit: cover;
     margin-top: 20px;
+}
+
+#quemsomos{
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-size: 1.2rem;
+    text-align: center;
+}
+#quemsomos img{
+    width: 400px;
+    height: auto;
+    object-fit: cover;
+    margin : 0 auto;
+}
+#quemsomos p{
+    margin: 0 auto;
+    line-height: 1.6;
+    font-size: 1.2rem;
+    text-align: justify;
+    max-width: 800px;
+}
+
+/* Media Query para telas menores que 1024px (Tablets e alguns laptops pequenos) */
+@media (max-width: 1024px) {
+    header{
+        flex-direction: column;
+        align-items: center;
+        margin-left: 0;
+    }
+    #Logo h1{
+        font-size: 2rem;
+    }
+    #NavMenu{
+        font-size: 1.4rem;
+        gap: 15px;
+        margin-right: 0;
+    }
+    #eventos{
+        font-size: 1.3rem;
+    }
+    #eventos img{
+        width: 150px;
+    }
+    #eventos h2{
+        font-size: 1.5rem;
+    }
+    #eventos p{
+        font-size: 1.2rem;
+    }
+    #eventos a{
+        font-size: 1.2rem;
+ 
+    
+}
+
+/* Media Query para telas menores que 768px (Tablets pequenos e celulares grandes) */
+@media (max-width: 768px) {
+    
+}
+
+/* Media Query para telas menores que 480px (Celulares pequenos) */
+@media (max-width: 480px) {
+    
+}
+
+/* Media Query para modo paisagem em telas menores que 500px de altura */
+@media (orientation: landscape) and (max-height: 500px) {
+    
+}
 }
