--- a/style.css
+++ b/style.css
@@ -93,52 +93,16 @@ header img{
     text-align: justify;
     max-width: 800px;
 }
-
-/* Media Query para telas menores que 1024px (Tablets e alguns laptops pequenos) */
-@media (max-width: 1024px) {
-    header{
-        flex-direction: column;
-        align-items: center;
-        margin-left: 0;
-    }
-    #Logo h1{
-        font-size: 2rem;
-    }
-    #NavMenu{
-        font-size: 1.4rem;
-        gap: 15px;
-        margin-right: 0;
-    }
-    #eventos{
-        font-size: 1.3rem;
-    }
-    #eventos img{
-        width: 150px;
-    }
-    #eventos h2{
-        font-size: 1.5rem;
-    }
-    #eventos p{
-        font-size: 1.2rem;
-    }
-    #eventos a{
-        font-size: 1.2rem;
- 
-    
+footer{
+    color:#4169E1;
+    text-align: center;
+    margin: 20px;
 }
-
-/* Media Query para telas menores que 768px (Tablets pequenos e celulares grandes) */
-@media (max-width: 768px) {
-    
+footer img{
+    width: 90px;
+    margin: 10px;
 }
-
-/* Media Query para telas menores que 480px (Celulares pequenos) */
-@media (max-width: 480px) {
-    
-}
-
-/* Media Query para modo paisagem em telas menores que 500px de altura */
-@media (orientation: landscape) and (max-height: 500px) {
-    
-}
+footer img:hover{
+    transform: scale(1.3);
+    transition: all 0.8s ease;
 }
